testdata/baselines/reference/submodule/conformance/commonJSAliasedExport.errors.txt
bug43713.js(1,27): error TS2307: Cannot find module './commonJSAliasedExport' or its corresponding type declarations.


==== bug43713.js (1 errors) ====
    const { funky } = require('./commonJSAliasedExport');
                              ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './commonJSAliasedExport' or its corresponding type declarations.
    /** @type {boolean} */
    var diddy
    var diddy = funky(1)
    
    
==== commonJSAliasedExport.js (0 errors) ====
    const donkey = (ast) =>  ast;
    
    function funky(declaration) {
        return false;
    }
    module.exports = donkey;
    module.exports.funky = funky;
    